--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "url": "git+https://github.com/kateinoigakukun/wasm-memprof.git"
     },
     "type": "module",
+    "scripts": {
+        "test": "node ./test/smoke.test.js"
+    },
     "exports": {
         ".": {
             "module": "./dist/wasm-memprof.js",
