--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "./plugins/*": "./dist/plugins/*"
     },
     "devDependencies": {
-        "typescript": "^5.7.2",
+        "esbuild": "^0.24.2",
         "protobufjs": "^7.4.0",
-        "protobufjs-cli": "^1.1.3"
+        "protobufjs-cli": "^1.1.3",
+        "typescript": "^5.7.2"
     }
 }
