--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     },
     "devDependencies": {
         "esbuild": "^0.24.2",
-        "protobufjs": "^7.4.0",
-        "protobufjs-cli": "^1.1.3",
+        "pprof-format": "^2.1.0",
         "typescript": "^5.7.2"
     }
 }
