Use `exports.[entry].import` instead of `module` in package.json
`module` is not a standard field in package.json and is not recognized
by Node.js.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "exports": {
         ".": {
-            "module": "./dist/wasm-memprof.js",
+            "import": "./dist/wasm-memprof.js",
             "types": "./dist/wasm-memprof.d.ts"
         },
         "./plugins/*": "./dist/plugins/*"
